# magus

./: LICENSE  README.md  magus.cabal
src/: Magus.hs  MagusTypes.hs  Main.hs  UI.hs
